@@ -1,3 +1,7 @@
+2005-06-02  Bruno Haible  <bruno@clisp.org>
+
+	* win32.d: Include <errno.h>.
+
 2005-06-01  Bruno Haible  <bruno@clisp.org>
 
 	* spvw_language.d (init_language): Fix syntax error in last patch.
